Changes in 4.8.5 (upcoming)

* Maintenance release including improvements for PHP 8.0 and bug fixes.
* Fixed: Database connection issue for new installations on PHP 8.0.
* Fixed: libxml_disable_entity_loader() deprecation warning on PHP 8.0.
* Fixed: Undefined array key warning on PHP 8.0.
* Added: Latest text translations. Thank you to all our translators.
* Changed: Plugin load warning includes version number.

Changes in 4.8.4 (29 Nov 2020)

* Maintenance release including support for PHP 8.0 and bug fixes.
* Fixed: Write panel JS error when override forms were switched off
  (thanks, GugUser).
* Fixed: Default publishing section is not updated on section delete/rename.
* Added: 'fields' attribute to <txp:article />.
* Added: Tags syntax extension to allow for custom processing order.
* Added: Additional public-side language strings, primarily for themes.
* Added: Latest translations. Thank you to all translators for your hard work.
* Changed: Override forms can be of any type, not just article. See prefs.
* Changed: Admin-side theme name references are appended with the theme version
  number.
* Changed: Improved keyboard focus within responsive tables (to allow scrolling
  via arrow keys).
* PrismJS 1.22.0.

Changes in 4.8.3 (13 Sep 2020)

* Fixed: A bug in 4.8.2 that can break some legacy plugins (thanks, Yiannis).
* Fixed: Correctly label 'Allow commenter images in comments' pref.
* Fixed: Reload private prefs on preferences save (thanks, phiw13).
* Fixed: More notifications on list panels if there were no assets recorded.
* Fixed: Improved upgrade path for Textpattern prior to version 4.5.0.
* Added: 'loading' attribute for <txp:article_image />, <txp:image /> and
  <txp:thumbnail /> tags.
* Added: Instantly refresh admin theme on change.
* Added: Latest translations. Thank you to all translators for your hard work.
* Changed: Theme styles are now optional.
* PrismJS 1.21.0.

Changes in 4.8.2 (29 Jul 2020)
