@@ -3,9 +3,11 @@ Changes in 4.8.5 (upcoming)
 * Maintenance release including improvements for PHP 8.0 and bug fixes.
 * Fixed: Database connection issue for new installations on PHP 8.0.
 * Fixed: libxml_disable_entity_loader() deprecation warning on PHP 8.0.
-* Fixed: Undefined array key warning on PHP 8.0.
+* Fixed: Undefined array key/offset warnings on PHP 8.0.
+* Fixed: System temp directory notice on PHP 8.0.
 * Added: Latest text translations. Thank you to all our translators.
 * Changed: Plugin load warning includes version number.
+* Changed: Comments off by default on new installations.
 
 Changes in 4.8.4 (29 Nov 2020)
 
